<resources>
    <string name="app_name">Glagopedija</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="project_team">Projektni tim</string>
    <string name="philosophy">Filozofski fakultet Osijek</string>
    <string name="matej_peharda">Matej Peharda (student)</string>
    <string name="silvio_saur">Silvijo Šaur (student)</string>
    <string name="milica_lukic">Prof. dr. sc. Milica Lukić</string>
    <string name="vera_blazevic">Dr. sc. Vera Blažević Krezić, poslijedoktorandica</string>
    <string name="etfos">Fakultet elektrotehnike, računarstva i informacijskih tehnologija</string>
    <string name="luka_mandic">Luka Mandić (mag. ing. comp.)</string>
    <string name="matija_maric">Matija Marić (mag. ing. comp.)</string>
    <string name="josip_balen">Prof. dr. sc. Goran Martinović</string>
    <string name="place_label">Mjesto</string>
    <string name="year_label">Vrijeme nastanka</string>
    <string name="type_label">Pismo</string>
    <string name="language_label">Jezik</string>
    <string name="content_label">Sadržaj</string>
    <string name="size_label">Veličina</string>
    <string name="interesting_label">Zanimljivosti</string>
    <string name="data_not_ready">Podatci nisu spremni, pokušajte ponovno</string>
    <string name="image_saved">Slika spremljena!</string>
    <string name="input_error">Unos nedozvoljenog znaka!</string>
    <string name="unsupported_input">Znakovi č, ć, ž, š i đ nisu dozvoljeni!</string>
    <string name="about_us">O nama</string>
    <string name="about_app">O aplikaciji</string>
    <string name="literature">Popis literature i izvora</string>
    <string name="translator">Prevoditelj</string>
    <string name="save_abort">Spremanje zaustavljeno!</string>
    <string name="share_abort">Djeljenje zaustavljeno!</string>
    <string name="about_app_glagoljica">\t\t\tNa temelju plana provedbe aktivnosti u okviru Programskih ugovora za cilj Unapređenje ishoda učenja u akademskoj godini 2014./2015. predviđeno je i odobreno oblikovanje mobilne aplikacije kojoj je cilj popularizacija i usvajanje nastavnih sadržaja iz hrvatske jezične povijesti, u kontinuitetu od IX. do XIX. i XX st. – u okviru Katedre za hrvatsku jezičnu povijest i hrvatsku dijalektologiju (nositeljica Projekta: prof. dr. sc. Milica Lukić).\n
\t\t\tU okviru tropismene i trojezične hrvatske kulturne baštine (srednjovjekovne i novovjekovne) dosada nije identificiran interes paleoslavista i paleokroatista za tipom popularizacije glagoljične sastavnice hrvatske jezične povijesti putem novih tehnologija, u ovom slučaju mobilnih aplikacija. Napredovanjem tehnologije, odlučili smo cjelokupnu prošlost glagoljičnog pisma podignuti na novu razinu i prilagoditi vremenu u kojem živimo. Da bismo doprinijeli paleoslavistici, odnosno paleokroatistici, odlučili smo napraviti popis svih relevantnih glagoljskih spomenika koji su nastali na hrvatskom kulturnom prostoru. Cilj je ovoga projekta osvješćivanje ljudi o nužnosti poznavanja glagoljskih spomenika, odnosno lakše pretraživanje istih i upravo je zbog toga zamišljen kao aplikacija pomoću koje se na jednostavan način mogu dobiti sve potrebne informacije, kao i popis svih hrvatskih glagoljskih spomenika – simbolično govoreći od Bašćanske ploče do Parčićeva misala (1893), odnosno od X/XI. st. do kraja XIX. i početka XX. st. Projekt odlikuje suradnja dviju znanstveno-nastavnih sastavnica osječkoga Sveučilišta – Filozofskoga fakulteta i Fakulteta elektrotehnike, računarstva i informacijskih tehnologija, a realizirali su ga studenti dvaju fakulteta u suradnji sa svojim mentorima čime će projekt poprimiti autorizaciju, znanstveno opravdanje kao temelj za popularizaciju i širu uporabnu vrijednost među korisnicima. Oblikovane su dvije aplikacije, odnosno po jedna aplikacija za svaku platformu čime će aplikacija biti dostupna širem broju ljudi. Platforme su za pravljenje aplikacije Android i Windows, odnosno WindowsPhone za pametne uređaje.\n
\t\t\tU kontinuitetu od X. stoljeća pa sve do pojave tiska i sutona hrvatskoga srednjovjekovlja identificirani su i preko "osobne iskaznice" opisani raznorodni hrvatskoglagoljski spomenici – od kamenih grafita i natpisa na istočnom i zapadnom polu hrvatskoga glagoljaštva (s poznatom demarkacijskom linijom oko rijeke Krke, ali i dublje prema sjeveru (okolica Zagreba) pa čak i u Slavoniji: drenovačka glagoljica, glagoljica iz Lovčića, preko najstarijih fragmentarnih liturgijskih spomenika (Bečki listići, Budimpeštanski odlomci, Splitski odlomak misala, Kukuljevićev odlomak misala, Ljubljanski homilijar i dr.) do prvih cjelovitih rukopisnih misala i brevijara (Vatikanski Illirico 4 , Novakov misal, Prvi i Drugi vrbnički brevijar, Hrvojev misal i dr.) te najstarijih beletrističkih / zborničkih tekstova (Ivančićev zbornik, Vinodolski zbornik, Petrisov zbornik i dr.) i pravnih spomenika (Darovnica slavnoga Dragoslava, Vinodolski zakon, Razvod istarski, Krčki statut i dr.).\n
\t\t\tU tabličnim opisima spomenika trudili smo se poštovati rezultate najnovijih paleoslavističkih / paleokroatističkih analiza, najvažnije zaključke i recentna izdanja (spomenika i priručnika), osobito kod odrednica pismo i jezik. Za hrvatske srednjovjekovne tekstove slijedili smo klasifikaciju akademika Stjepana Damjanovića nazivajući jezik liturgijskih spomenika hrvatskostaroslavenski, potom amalgamni jezik lijepe književnosti (beletristike) hrvatsko-staroslavenski jezik, a jezik pravnih tekstova (tzv. poslovni jezik, usp. Bratulić 2013: 309) (staro)hrvatski (čakavski, kajkavski, štokavski) (usp. Damjanović 2009: 351). S druge strane, za pismo smo rabili termine i klasifikaciju paleografa i grafolingvista Matea Žagara (usp. 2009: 175) pa razlikujemo najstarije kamene zapise (i neke spomenike kanona staroslavenskih spisa) na obloj glagoljici, potom spomenike ispisane formativnom glagoljicom (predstandardizacijsko razdoblje zapadnoga ili istočnoga pola hrvatskoga glagoljaštva), formiranom ustavnom (uglatom) glagoljicom, potom poluustavom (poluuncijalom) i kurzivom (knjiški kurziv uistinu je poluustav, a kancelarijski / poslovni kurziv pravi je kurziv). Od XVI. stoljeća nastupa razdoblje "velikoga previranja" hrvatskoga jezika na pragu novovjekovlja. Premda se uvijek ističe kako hrvatski glagoljaši s prvotiskom Misala po zakonu rimskoga dvora 22. veljače 1483. dotiču vrhunac svoga djelovanja, dok Brozićev brevijar iz 1561. godine simbolizira kraj prirodnoga razvoja hrvatskostaroslavenskoga jezika, to ne znači da se glagoljična rukopisna i tiskovna produkcija smanjila u odnosu na "zlatno doba glagoljaštva" u XIV. i XV. stoljeću. Tek je u novije vrijeme detaljnije istražen glagoljični korpus XVI. stoljeća (Damjanović 2014: 59-62) i postavljen u okvire modernoga konceptualiziranja hrvatskoga glagoljaštva kao integralnoga fenomena koji se promatra kao tisućgodišnja cjelina (od IX/X. do XX. st.), a istražuje primjenom novih, interdisciplinarnih pristupa i metodoloških aparata. Ističemo da se ranije predstavljena i u opisima rabljena terminologija akademika Damjanovića odnosi na tekstove XIV. i XV. stoljeća, ali se njome nastavljamo, u skladu s istaknutim, služiti i kod novovjekih glagoljskih spomenika. Primjerice, u određenim situacijama (kod izdanja riječke glagoljske tiskare) služimo se terminom hrvatsko-staroslavenski jezik samo kako bismo naglasili da i u XVI. stoljeću, inače razdoblju velikoga previranja, jezični koncept glagoljaša počiva na tradiciji sastavljanja elemenata staroslavenskoga jezika i elemenata hrvatskih idioma (ponajprije čakavskih, ali i s iznimnim kajkavskim naslojavanjima, pogotovo u zbornicima). Tu je, s druge strane, i osobita jezična politika protestanata (izdali su 14 glagoljskih naslova u Urachu) koja počiva na hibridnom tronarječnom jeziku, što će koncepcijski nasljedovati pripadnici ozaljskoga književnog kruga. U skladu s tim, velik broj pravnih tekstova XVI. st. pisan je tronarječnim hibridnim jezikom (primjerice listine zrinsko-frankopanske kancelarije). Glagoljički udio hrvatske pismenosti u XVII. i XVIII. stoljeću pripada rukopisnoj kancelarijskoj i zborničkoj domeni (glagoljski kurziv i poluustav poslovne i privatne sfere), ali u proširenom geografskom prstenu koji obuhvaća čak i slovenske i slavonske župe na sjeveru i istoku, pa i krajnje južne prostore gdje se inače rabila hrvatska ćirilica (Brač, Dubrovnik). Glede liturgijskoga tiska može se zaključiti da je – centraliziran u Rimu, ograničen djelovanjem unionističke politike i rimske Propagande za širenje vjere - sveden na izdavanje jezično i pismovno reformiranih hrvatskoglagoljskih liturgijskih knjiga prema istočnoslavenskoj (ukrajinskoj) recenziji u početnoj i zreloj, razvijenoj fazi (izdanja Rafaela Levakovića, Ivana Paštrića, Matea Karamana, Mateja Sovića i dr.).\n
\t\t\tPravi uzmak glagoljice, pritom ne mislimo na kurziv privatne i poslovne sfere, dolazi do izražaja u XVIII. st. Šćaveti (čakavizirani latinični lekcionari i, kasnije, misali) sve više počinju zamjenjivati litrugijske knjige koje je puk odbijao zbog istočnoslavenskoga jezika. Potkraj XIX. stoljeća glagoljica će se pokušati revitalizirati, uz hrvatski crkvenoslavenski jezik, u okviru Cyrillomethodiane (Lukić 2012: 317-337) u novim liturgijskim knjigama (Misal D. A. Parčića 1893), no već početkom XX. stoljeća hrvatskostaroslavenske liturgijske knjige otisnute su latiničnim pismom. Kako ne bismo narušili kontinuitet, u opise smo uvrstili i te reprezentativne hstsl. spomenike iz XX. stoljeća, premda su ostvareni na latinici. Također je važno napomenuti, osobito kada je riječ o pravnim i privatnim dokumentima (općinsko, javnopravno i privatnopravno ustrojstvo: npr. pisma, isprave, oporuke, odluke, ugovori, računi i dr.), da nismo uvrstili sve dokumente iz izdanja Acta croatica (listine do XVI. st., 1. izdanje I. Kukuljević Sakcinski 1863, 2. izdanje Đuro Šurmin 1898, potom izdanjā Radoslava Lopašića od 1879. do 1895) kao ni sve dokumente u razdoblju od XVII. do XIX. stoljeća, već smo se rukovodili načelom reprezentativnosti, bilo da je riječ o opsegu i cjelovitosti dokumenata, izvornosti sadržaja i/ili važnosti jezika, pisma i stila kojima su dokumenti ostvareni.\n
\t\t\tU trenutku objavljivanja aplikacije obrađeno je više od 200 spomenika, a s obzirom na to da je riječ o mobilnoj aplikaciji koja se svakodnevno može nadograđivati, taj broj može se i povećati. Popis svih spomenika raspoređen je kroz 10 stoljeća počevši od XI. pa sve do XX. stoljeća. Svako stoljeće predstavlja slika koja kao reprezentativni primjer svjedoči o razdoblju pa su tako prva stoljeća predstavljena kroz kamene spomenike, a nadolazeća kroz fragmente te na kraju kroz gotove tiskane knjige. Na ikonu je aplikacije zasluženo postavljena Bašćanska ploča kao jedan od najbitnijih spomenika hrvatske kulturne baštine.\n
\t\t\tPreostaje istaknuti da je riječ o nastavnom projektu koji ponajprije svoje opravdanje i svoju funkcionalnost pronalazi među studentskom populacijom, i to među studentima humanističkih i društvenih studija. Ova virtualna glagoljska enciklopedija – GLAGOPEDIJA – poslužit će kao još jedan nastavni izvor i vrijedan materijal za pripremu sveučilišnih ispita, projekata, završnih i diplomskih radova, no vjerujemo kako će jednako uspješno zainteresirati i širu publiku. Glagoljici hrvatskih spomenika u tisućgodišnjem kontinuitetu aplikacijom biva udahnut nov život prema staroj srednjovjekovnoj, evanđeoskoj i ćirilometodskoj, maksimi: Novo vino u nove mijehove (usp. Bratulić 1998: 13), a tradirana izjava o njezinu kabinetskom životu i životarenju na stolovima filologa pokretanjem ove aplikacije biva stubokom revidirana.\n</string>
</resources>