<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".activitys.MainActivity">

    <item android:id="@+id/search_icon"
        android:orderInCategory="200"
        app:showAsAction="always"
        android:title="search"
        android:icon="@mipmap/ic_search_white_24dp"
        />

    <item android:id="@+id/o_aplikaciji"
        android:title="@string/about_app"
        android:orderInCategory="100"
        app:showAsAction="never"
        />

    <item android:id="@+id/literatura"
        android:title="@string/literature"
        android:orderInCategory="100"
        app:showAsAction="never"
        />

    <item android:id="@+id/o_nama"
        android:title="@string/about_us"
        android:orderInCategory="100"
        app:showAsAction="never"
        />

    <item android:id="@+id/translate"
        android:title="@string/translator"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
</menu>
